fixed item detail alignment

--- a/scss/base/_sils.scss
+++ b/scss/base/_sils.scss
@@ -54,6 +54,7 @@
 
 .itemSummaryDetail {
     @include grid-columns(8,8,8);
+    float: right !important;
 }
 
 
